Update Greville Part II.ipynb

--- a/Greville Part II.ipynb
+++ b/Greville Part II.ipynb
@@ -4602,14 +4602,14 @@
     "    bins = [go.Bar(x = df.iloc[year,:][1:].filter(regex=\"male\").values,\n",
     "                   y = [int(s[:2])+1 for s in age_ranges],\n",
     "                   orientation='h',\n",
-    "                   name='Men{:d}'.format(year),\n",
+    "                   name='Men till {:d}'.format(2020 -year),\n",
     "                   hoverinfo='skip'\n",
     "                   )\n",
     "            for year in years]\n",
     "    bins += [go.Bar(x = -df.iloc[year,:][1:].filter(regex=\"female\").values,\n",
     "                y=[int(s[:2])+1 for s in age_ranges],\n",
     "                orientation='h',\n",
-    "                name='Women {:d}'.format(year),\n",
+    "                name='Women till {:d}'.format(2020 - year),\n",
     "                hoverinfo='skip',\n",
     "               )\n",
     "             for year in years]\n",
